version 10.2.2
date: dd/mm/yyyy
  *

version 10.2.1
date: 07/02/2022
  * better semantic checks for the Manchester expressions, with the possibility to disable such checks
  * added the possibility to avoid semantic checks when creating/updating triples from a Manchester expression
  * replaced usage of users' email in favour of IRIs in system settings
  * fixed several bugs in Global Search (number of returned results, better checks on the creation of the indexes for SKOSXL projects, creting the indexes for OWL projects, deletion of indexes for a specific project)
  * fixed the use of Lucene FTS index in "GraphDB SE" projects during searches

version 10.2
date: 26/01/2022
  * Better performances in getTopConcepts and getNarrowerConcepts, thanks to Saku Seppälä for the contribution!
  * Added localization for Spanish, thanks to Juan Antonio Pastor Sánchez for the contribution!
  * GraphDB-powered indexed search with GraphDB v9.9.0+ now requires adding the lucene-fts-plugin folder and wars to  GraphDB's plugin folder (ST will check that the plugin is installed when performing search)
  * Resolved disconnecting issues with SAML authentication: added a configuration setting for ignoring the expiration of the SAML assertion.
  * fixed a bug in the search on a GraphDB containing an Apostrophe or a \
  * fixed a bug in GlobalSearch about concurrent write access to the indexes
  * fixed a bug in the service that lists EDOAL correspondences
  * added the use of the annotation SubPropertyOf in the services SKOS/addBroaderConcept and SKOS/addTopConcept
  * updated Karaf to version 4.2.15, which uses Pax Logging 1.11.13 upgrading to log4j 2.17.1 (and slf4j 1.7.32),
    fixing log4j CVE-2021-44228, CVE-2021-45105, CVE-2021-44832 and logback CVE-2021-42550 issues
  * updated dependency on Apache sshd 2.5.1
  * updated dependency on Sheet2RDF 4.2.3
  * updated dependency on Coda 1.7.4

version 10.1.1
date: 28/10/2021